--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -2,10 +2,31 @@ body {
     background: #f2f2f2;
 }
 
+.navbar-custom {
+    color: #fff;
+}
+
+.navbar-custom .navbar-nav > li > a {
+    color: #fff;
+}
+
+.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
+    color: #fff;
+    background-color: transparent;
+}
+
+.navbar-custom .navbar-brand {
+    color:#eeeeee;
+}
+
 .navbar {
     background-color: rgb(60,171,218);
     border: none;
+    color: #fff;
 }
+
+
+
 
 .flashcard {
     position: relative;
@@ -1031,7 +1052,7 @@ li.active>a {
 #myBrand {
     background-size: 44px 44px;
     float: left;
-    padding-right: 69px;
+    padding-right: 10px;
     line-height: 42px;
     color: rgb(60,171,218);
 }
